--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p>fuck you </p>    <br>
     <p>are you OK ? </p>
     <hr>
-    <p>Actually, I want to be a pilot. </p>
+    <p>Actually, I want to be a pilot. <a href="/foo.html">Click this to contact me.</a> </p>
+
 </body>
 </html>
