--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>hehehe</title>
 </head>
+
 <body>
     <p>hello my dear</p>
-    <p>fuck you </p>    <br>
+    <p>fuck you </p> <br>
     <p>are you OK ? </p>
     <hr>
-    <p>Actually, I want to be a pilot. <a href="/foo.html">Click this to contact me.</a> </p>
-
-</body>
-</html>
+    <p>Actually, I want to be a pilot. <a href="./foo.html">Click this to contact me.</a> </p>
