--- a/foo.html
+++ b/foo.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nothing here</title>
+    <title>Sample Layout</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <p>you are fooled, congratulations!</p>
+    <header><img src="./images/下载.png" alt="ACME Widgets"></header>
+    <div id="wrapper">
+        <div id="content_area">
+            <h1>Welcome to ACME Widgets!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Nam tincidunt posuere malesuada. Suspendisse ac felis ac ante tincidunt ullamcorper. Nulla vitae ligula vitae mi rhoncus adipiscing. Etiam congue felis id ante semper at imperdiet massa
+                tempor. Nullam hendrerit fermentum ligula, sit amet pellentesque purus faucibus in. Sed molestie lacus mauris, ultrices accumsan sem. Phasellus facilisis malesuada sem, nec ornare ipsum dictum consectetur.</p>
+            <p>Nulla libero nisl, consectetur eget accumsan vel, interdum vitae enim vitae nulla feugiat dignissim ut sit amet odio. Nunc non enim id sem faucibus congue. Integer ac mi in justo euismod sodales. Aenean imperdiet vestibulum auctor. Sed ullamcorper
+                congue ipsum, eget vulputate sem scelerisque in. Donec ornare vestibulum congue. Etiam sapien nulla, rutrum mattis mattis ut, pellentesque eget augue. Proin nisl mauris, suscipit quis elementum ac, vestibulum quis lacus. Ut eget justo
+                vitae urna varius sodales. </p>
+        </div>
+        <div id="left_side">
+            <ul>
+                <li><a href="#">Mission</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">Executive Team</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div id="right_side">
+            <p><strong>SPECIAL WIDGET DEAL!</strong></p>
+            <p>Buy three widgets and get a fourth for free. Act now!</p>
+        </div>
+    </div>
+    <footer>Copyright information usually goes here in the footer.
+    </footer>
 </body>
+
 </html>
